# EX2_Files

./: Bank2.txt  Bank3.txt  CMakeLists.txt  main.c
tests_examples/: in1.txt  in2.txt  in3.txt  out1.txt  out2.txt  out3.txt
